[Fix]: Many tiny bugs (#232)